--- a/Calculator/inde.html
+++ b/Calculator/inde.html
@@ -71,10 +71,10 @@
     </td>
   </tr>
   <tr>
-  <td colspan="4"><input type="button" value="=" onclick="calculate()" id="success" /> </td>
+  <td colspan="4"><input type="button" value="=" onclick="calculation()" id="success" /> </td>
   </tr>
   <tr>
-    <td colspan="4"> <input type="button" value="Clear" onclick="clearScreen()" id="clear" /> </td>
+    <td colspan="4"> <input type="button" value="Clear" onclick="clscreen()" id="clear" /> </td>
   </tr>
 </table>
  
